# bei-realtime-app

./: .gitignore
.github/workflows/: build.yaml  engine.yaml  enginelangsungbuild.yaml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/saham/heruwingchun/saham_calc/: MainActivity.kt
app/lib/: main.dart
app/lib/engine/: ffi_bridge.dart
app/test/: widget_test.dart
engine/: CMakeLists.txt
engine/src/: bridge.cpp
scripts/: build_engine.sh
